samples/_failures_safe/1761271026_bc35ce_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_236cd40a.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_236cd40a.c:141:5: error: expected expression at end of input
  141 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_236cd40a.c:141:5: error: expected declaration or statement at end of input
